tests/ui/fail/duplicate_string_attrs.rs
fn main() {}

microtype::microtype! {
    #[string]
    #[string]
    String {
        Password
    }
}
