tests/ui/fail/duplicate_string_attrs.stderr
error: macros that expand to items must be delimited with braces or followed by a semicolon
 --> tests/ui/fail/duplicate_string_attrs.rs:5:5
  |
5 |     #[string]
  |     ^
  |
help: change the delimiters to curly braces
  |
5 |     {}[string]
  |     ~
help: add a semicolon
  |
5 |     #;[string]
  |      +

error: duplicate `string` attribute found
 --> tests/ui/fail/duplicate_string_attrs.rs:5:5
  |
5 |     #[string]
  |     ^
